syntax = "proto3";

package neutral_diet.food.v1;

message LifeCycle {
  double carbon_footprint = 1;
  int32 food_item_id = 2;
  int32 source_id = 3;
}
